...
      body: Column(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 30),
            child: TextField(
              key: const Key("Title Key"),
              controller: notesStore.titleController,
              decoration: const InputDecoration(
                border: OutlineInputBorder(),
                hintText: "Please enter title",
              ),
            ),
...
          const SizedBox(
            height: 10,
          ),
          Padding(
            padding: const EdgeInsets.symmetric(horizontal: 30),
            child: TextField(
              key: const Key("Description Key"),
              controller: notesStore.descriptionController,
              decoration: const InputDecoration(
                border: OutlineInputBorder(),
                hintText: "Please enter description",
              ),
            ),
...
